# agent-desktop-applications

./: README.md  package.json  tsconfig.json
native/: Cargo.toml
native/src/: main.rs
