[package]
name = "agent-app"
version = "0.0.1"
edition = "2021"
description = "Desktop application automation CLI for AI agents"

[[bin]]
name = "agent-app"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
enigo = "0.2"
screenshots = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
